[gd_scene load_steps=9 format=3 uid="uid://bptw2nlfygtlb"]

[ext_resource type="Theme" uid="uid://8783p7rjqna0" path="res://assets/buttons/themes/app_theme.tres" id="1_lrka0"]
[ext_resource type="Script" path="res://scripts/menu/control_computer_configuration.gd" id="2_58hum"]
[ext_resource type="Script" path="res://scripts/menu/navigation.gd" id="3_bxj10"]
[ext_resource type="Theme" uid="uid://dxiaadhqntj3d" path="res://assets/buttons/themes/menu_button.tres" id="3_dtmvu"]
[ext_resource type="StyleBox" uid="uid://deo708pmaclnx" path="res://assets/buttons/resources/style_box_cancel.tres" id="4_ywhyd"]
[ext_resource type="Script" path="res://scripts/menu/popup_drag_panel.gd" id="6_o1x1l"]
[ext_resource type="Texture2D" uid="uid://mt18q1agusq1" path="res://assets/buttons/icons/thick_close.png" id="7_u7d76"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0wa6h"]

[node name="ControlComputerConfiguration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -980.0
offset_bottom = -616.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lrka0")
script = ExtResource("2_58hum")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 483.0
offset_bottom = 432.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 60.0
offset_top = 56.0
offset_right = 183.0
offset_bottom = 94.0
text = "Tama√±o"

[node name="SizeSlider" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -112.5
offset_right = 178.5
offset_bottom = -82.5
grow_horizontal = 2
grow_vertical = 2
min_value = -6.0
max_value = 21.0

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 65.0
offset_top = 146.0
offset_right = 211.0
offset_bottom = 184.0
text = "Opacidad"

[node name="OpacitySlider" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = -15.0
offset_right = 176.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
min_value = 100.0
max_value = 255.0
value = 255.0

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 69.0
offset_top = 248.0
offset_right = 311.0
offset_bottom = 286.0
text = "Ocultar Camara"

[node name="CheckBox" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 324.0
offset_top = 254.0
offset_right = 356.0
offset_bottom = 286.0
alignment = 1
icon_alignment = 1

[node name="LinkButton" type="LinkButton" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -125.0
offset_right = 90.5
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
text = "Mas configuraciones"
script = ExtResource("3_bxj10")
scene = 15

[node name="AcceptButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.5
offset_top = -79.0
offset_right = -30.5
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_dtmvu")
text = "Aceptar"

[node name="CancelButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.5
offset_top = 138.5
offset_right = 189.5
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("4_ywhyd")
theme_override_styles/hover = ExtResource("4_ywhyd")
theme_override_styles/pressed = ExtResource("4_ywhyd")
text = "Cancelar"

[node name="PopUpDragPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 483.0
offset_bottom = 76.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_0wa6h")
script = ExtResource("6_o1x1l")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 27.0
offset_right = 444.0
offset_bottom = 60.0
texture_normal = ExtResource("7_u7d76")
ignore_texture_size = true
stretch_mode = 5

[connection signal="value_changed" from="Panel/SizeSlider" to="." method="_on_size_slider_value_changed"]
[connection signal="value_changed" from="Panel/OpacitySlider" to="." method="_on_opacity_slider_value_changed"]
[connection signal="pressed" from="Panel/LinkButton" to="Panel/LinkButton" method="_on_pressed"]
[connection signal="pressed" from="Panel/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="Panel/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="gui_input" from="PopUpDragPanel" to="PopUpDragPanel" method="_on_gui_input"]
[connection signal="pressed" from="TextureButton" to="." method="_on_cancel_button_pressed"]
